@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n6.c	1.44 (gritter) 8/8/06
+ * Sccsid @(#)n6.c	1.45 (gritter) 8/9/06
  */
 
 /*
@@ -555,6 +555,11 @@ casevs(void)
 	i = inumb(&lss);
 	if (nonumb)
 		i = lss1;
+	if (xflag && i < 0) {
+		if (warn & WARN_RANGE)
+			errprint("negative vertical spacing ignored");
+		i = lss1;
+	}
 	if (i < VERT)
 		i = VERT;	/* was VERT */
 	lss1 = lss;
